hero spacings to fix #11

--- a/assets/sass/communicationpublique-theme/styles/hero.sass
+++ b/assets/sass/communicationpublique-theme/styles/hero.sass
@@ -12,6 +12,7 @@ header.hero
     .hero-text
         .has-lead p
             @include media-breakpoint-up(desktop)
+                margin-top: space(2)
                 @include media-breakpoint-down(xxl)
                     font-size: Min(Max(5vw, $h1-size), $h5-size-desktop)
         h1
@@ -31,11 +32,8 @@ header.hero
                             repeat: no-repeat
                             size: contain
                         display: inline-block
-                        height: pxToRem(40)
-                        width: pxToRem(40)
-                        @include media-breakpoint-down(desktop)
-                            height: pxToRem(30)
-                            width: pxToRem(30)
+                        height: pxToRem(30)
+                        width: pxToRem(30)
                     &:first-child
                         color: var(--color-text)
                         &::before
@@ -59,11 +57,8 @@ header.hero
                         repeat: no-repeat
                         size: contain
                     display: inline-block
-                    height: pxToRem(40)
-                    width: pxToRem(40)
-                    @include media-breakpoint-down(desktop)
-                        height: pxToRem(30)
-                        width: pxToRem(30)
+                    height: pxToRem(30)
+                    width: pxToRem(30)
                 &::before
                     content: ''
                     position: absolute
@@ -73,8 +68,8 @@ header.hero
                     content: ''
                     background-image: url('/assets/images/masks/bubble-2.svg')
                     transform: translate(0%, 90%)
-    > .btn
-        margin-top: $spacing-4
+        > .btn
+            margin-top: $spacing-4
 
     // breadcrumb
     .breadcrumb-nav
