--- a/assets/sass/communicationpublique-theme/styles/projects.sass
+++ b/assets/sass/communicationpublique-theme/styles/projects.sass
@@ -27,7 +27,7 @@
                         aspect-ratio: 512 / 448
                     &:hover
                         .project-title a
-                            color: $color-accent-alt
+                            color: inherit
 .projects__page
     .hero
         .dropdown-share
